[gd_scene load_steps=12 format=3 uid="uid://b7nxt2hc5tvjo"]

[ext_resource type="PackedScene" path="res://scenes/game/item/item_deposit/item_deposit.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bbavnvhdyv0se" path="res://assets/models/processor.glb" id="2_fwq0a"]
[ext_resource type="Material" uid="uid://bbiqg1ds6lwaf" path="res://assets/materials/processor.tres" id="3_8f2b8"]
[ext_resource type="AudioStream" uid="uid://b28rn55hxvivr" path="res://assets/audio/machine/machine_loop.wav" id="4"]
[ext_resource type="PackedScene" uid="uid://c7qyybqvmlu5y" path="res://scenes/game/gameobjects/interactables/hint_object_interface.tscn" id="4_j733o"]
[ext_resource type="Script" path="res://scenes/game/gameobjects/processor.gd" id="10"]

[sub_resource type="BoxShape3D" id="9"]
size = Vector3(3, 3, 5)

[sub_resource type="BoxShape3D" id="2"]
size = Vector3(4, 3, 5)

[sub_resource type="Animation" id="Animation_54i3r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vsc5k"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hpsfj"]
_data = {
"RESET": SubResource("Animation_54i3r"),
"fade_in": SubResource("Animation_vsc5k")
}

[node name="processor" type="StaticBody3D" node_paths=PackedStringArray("prog_bar", "anim_player")]
collision_layer = 3
collision_mask = 0
script = ExtResource("10")
prog_bar = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar")
anim_player = NodePath("CanvasLayer/HintObjectInterface/HintObjectAnimationPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("9")

[node name="processor" parent="." instance=ExtResource("2_fwq0a")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="obj-processor" parent="processor" index="0"]
surface_material_override/0 = ExtResource("3_8f2b8")

[node name="ItemDeposit" parent="." instance=ExtResource("2")]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ItemDeposit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("2")

[node name="ProcessTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HintObjectInterface" parent="CanvasLayer" instance=ExtResource("4_j733o")]

[node name="CanvasModulate" parent="CanvasLayer/HintObjectInterface" index="0"]
color = Color(1, 1, 1, 0)

[node name="TitleLabel" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="0"]
text = "processor"

[node name="StatBar" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="1"]
visible = true

[node name="Label" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar" index="0"]
text = ""

[node name="HintObjectAnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HintObjectInterface"]
libraries = {
"": SubResource("AnimationLibrary_hpsfj")
}

[node name="ItemSpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 3.6)

[node name="ProcessingSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4")
bus = &"SoundFX"

[node name="DepositSound" type="AudioStreamPlayer3D" parent="."]
bus = &"SoundFX"

[connection signal="body_entered" from="ItemDeposit" to="." method="_on_ItemDeposit_body_entered"]
[connection signal="timeout" from="ProcessTimer" to="." method="_on_ProcessTimer_timeout"]

[editable path="processor"]
[editable path="CanvasLayer/HintObjectInterface"]
